--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,7 +14,7 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
+            anonymous: ~
             lazy: true
             provider: in_database
 
@@ -38,8 +38,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-          - { path: ^/admin, roles: ROLE_ADMIN }
-         # - { path: ^/profile, roles: ROLE_USER }
-          - { path: ^/login, roles: ROLE_USER }
+        #- { path: ^/admin, roles: IS_AUTHENTICATED_ANONYMOUS } # On va changer plustard
+        # - { path: ^/profile, roles: ROLE_USER }
+        #  - { path: ^/login, roles: ROLE_USER }
 
-    access_denied_url: /accueil
+    access_denied_url: /connexion
