--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,5 +27,9 @@ services:
         resource: '../src/Controller/'
         tags: ['controller.service_arguments']
 
+
+    custom_logout_handler:
+        class: App\Handler\CustomLogoutSuccessHandler
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
